--- a/templates/template.html
+++ b/templates/template.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Aqua Fashion | Leading brand of London & Paris</title>
+<title>HomeBrands | Leading fashion brands of Nigeria</title>
 
 <!-- Google fonts -->
 <link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic' rel='stylesheet' type='text/css'>
@@ -52,16 +52,17 @@
       
       <ul class="nav navbar-nav">        
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Collections <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Brands <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="collections">Men</a></li>
-            <li><a href="collections">Women</a></li>
-            <li><a href="collections">Gifts</a></li>            
+            <li><a href="collections">Women</a></li>           
           </ul>
+      
         </li>
+<!------------------      remove checkout and look book
         <li><a href="lookbook">Look book</a></li>
         <li><a href="checkout">checkout</a></li>
-      </ul>
+      </ul>  ---->
       
       <form class="navbar-form navbar-left searchbar" role="search">
         <div class="form-group">
@@ -71,27 +72,7 @@
       </form>
       <ul class="nav navbar-nav">
         <li><a href="#"  data-toggle="modal" data-target="#login"><span class="glyphicon glyphicon-user"></span> Login / Register</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-shopping-cart"></span> Cart <span class="cart-counter">8</span> <span class="caret"></span></a>
-          <div class="dropdown-menu mini-cart">
-          <div class="row product-list">
-            <div class="col-xs-3"><a href="#"><img src="../static/images/products/1.jpg" class="img-responsive" alt="product"></a></div>
-            <div class="col-xs-7"><a href="#">White V-neck Tshirt</a></div>
-            <div class="col-xs-1"><a href="#"><i class="fa fa-close"></i></a></div>
-          </div>
 
-          <div class="row product-list">
-            <div class="col-xs-3"><a href="#"><img src="../static/images/products/2.jpg" class="img-responsive" alt="product"></a></div>
-            <div class="col-xs-7"><a href="#">White V-neck Tshirt</a></div>
-            <div class="col-xs-1"><a href="#"><i class="fa fa-close"></i></a></div>
-          </div>
-
-          <div class="clearfix">
-          <a href="checkout" class="btn btn-primary pull-left">conitune shopping</a> <a href="/checkout" class="btn btn-danger pull-right">checkout</a>
-          </div>
-
-          </div>
-        </li>
       </ul>
     </div><!-- Wnavbar-collapse -->
   </div><!-- container-fluid -->
@@ -122,9 +103,7 @@
     	<a href="#"><i class="fa fa-facebook-square" data-toggle="tooltip" data-placement="top" data-original-title="facebook"></i></a>
     	<a href="#"><i class="fa fa-instagram"  data-toggle="tooltip" data-placement="top" data-original-title="instragram"></i></a>
     	<a href="#"><i class="fa fa-twitter-square" data-toggle="tooltip" data-placement="top" data-original-title="twitter"></i></a>
-    	<a href="#"><i class="fa fa-pinterest-square" data-toggle="tooltip" data-placement="top" data-original-title="pinterest"></i></a>
     	<a href="#"><i class="fa fa-tumblr-square" data-toggle="tooltip" data-placement="top" data-original-title="tumblr"></i></a>    	
-    	<a href="#"><i class="fa fa-youtube-square" data-toggle="tooltip" data-placement="top" data-original-title="youtube"></i></a>
     </div>
 </div>
 
