Code refactored,RegisterForm Changed to accountform, comments added, controller created

--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,7 @@
 		                 {% endfor %}
 	                   {% endif %}
 					  {{ form.remember(class_="form-control") }}
+					  {{ form.remember.label.text}}
                 </label>
                 </div>
                 <div class="forgot-password"><a href="#">Forgot Password</a></div>
