--- a/templates/login.html
+++ b/templates/login.html
@@ -4,44 +4,44 @@
    <div class="row" style="margin-top:100px;">
    <div class="panel-body">
             <form class="col-sm-6" method="POST" action="{{ url_for('login') }}">
-			{{ form.hidden_tag()}}
+			{{ formLogin.hidden_tag()}}
                 <h4>Sign In</h4>
                 <div class="form-group">
                 
-				       {% if form.email.errors %}
-		                  {% for error in form.email.errors %}
+				       {% if formLogin.email.errors %}
+		                  {% for error in formLogin.email.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.email(placeholder=form.email.label.text, class_="form-control") }}
+					  {{ formLogin.email(placeholder=formLogin.email.label.text, class_="form-control") }}
                 
                 </div>
                 <div class="form-group">
                 
-				  {% if form.password.errors %}
-		                  {% for error in form.password.errors %}
+				  {% if formLogin.password.errors %}
+		                  {% for error in formLogin.password.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.password(placeholder=form.password.label.text, class_="form-control") }}
+					  {{ formLogin.password(placeholder=formLogin.password.label.text, class_="form-control") }}
                 
                 </div>
                 <div class="checkbox">
                 <label>
                  
-				 {% if form.remember.errors %}
-		                  {% for error in form.remember.errors %}
+				 {% if formLogin.remember.errors %}
+		                  {% for error in formLogin.remember.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.remember(class_="form-control") }}
-					  {{ form.remember.label.text}}
+					  {{ formLogin.remember(class_="form-control") }}
+					  {{ formLogin.remember.label.text}}
                 </label>
                 </div>
                 <div class="forgot-password"><a href="#">Forgot Password</a></div>
