--- a/templates/template.html
+++ b/templates/template.html
@@ -163,48 +163,50 @@
 
 
    <div class="row">
-            <div class="col-sm-6">
+            <form class="col-sm-6" method="POST">
+			{{ formLogin.hidden_tag()}}
                 <h4>Sign In</h4>
                 <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-				  {% if form.email.errors %}
-		                  {% for error in form.email.errors %}
+				<!-- Comment   -->
+				  {% if formLogin.email.errors %}
+		                  {% for error in formLogin.email.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.email(placeholder=form.email.label.text, class_="form-control") }}
+					  {{ formLogin.email(placeholder=formLogin.email.label.text, class_="form-control") }}
                 
                 </div>
                 <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-				{% if form.password.errors %}
-		                  {% for error in form.password.errors %}
+				{% if formLogin.password.errors %}
+		                  {% for error in formLogin.password.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.password(placeholder=form.password.label.text, class_="form-control") }}
+					  {{ formLogin.password(placeholder=formLogin.password.label.text, class_="form-control") }}
                 
                 </div>
                 <div class="checkbox">
                 <label>
-                {% if form.remember.errors %}
-		                  {% for error in form.remember.errors %}
+                {% if formLogin.remember.errors %}
+		                  {% for error in formLogin.remember.errors %}
 							  <div class="text-danger">
 								 {{ error }}
 							 </div>
 		                 {% endfor %}
 	                   {% endif %}
-					  {{ form.remember(class_="form-control") }}
-					  {{ form.remember.label.text}}
+					  {{ formLogin.remember(class_="form-control") }}
+					  {{ formLogin.remember.label.text}}
                 </label>
                 </div>
                 <div class="forgot-password"><a href="#">Forgot Password</a></div>
-                <button type="submit" class="btn btn-danger">Submit</button>
-            </div>
+                <button type="submit" class="btn btn-danger" name="login" value="Login">Submit</button>
+            </form>
             <div class="col-sm-6">
             <h4>Create an Account</h4>
             <p>I would like to create a new account. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor tellus, tempor ut ultrices ferme ntum, aliquam consequat metus. </p>
