feat:Add style for home page flash messaging style the font,font-weight and color, alignment to the right , beneath the log/register button

--- a/static/style.css
+++ b/static/style.css
@@ -290,3 +290,13 @@ div.selector option{ padding: 10px;}
 
 
 }
+
+.flash_messages .btn-default .btn-xs {
+	
+	margin:0px;
+	
+	background-color:#fff;
+	font-family:'Source Sans Pro', sans-serif; 
+	font-size:8px; 
+	text-align:center;
+}
